<resources>
    <string name="app_name">TicTacToeX</string>
    <string name="button_classic">TicTacToe</string>
    <string name="button_x">TicTacToe X</string>
    <string name="checkmark_symbol">\u2713</string>
    <string name="color_selection">Color Selection</string>
    <string name="draws">Draws</string>
    <string name="exit">Exit</string>
    <string name="player">Player</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="rematch">Rematch!</string>
    <string name="result_draw">It\'s A Draw!</string>
    <string name="results_wins">Wins!</string>
    <string name="scorecard">Scorecard</string>
    <string name="selections">Selections</string>
    <string name="start_game">Start Game</string>
    <string name="swaps">Swaps:</string>
    <string name="tokens">Tokens:</string>
    <string name="wins">Wins:</string>

    // In Game Toasts
    <string name="cannot_play_occupied">Please choose an empty square.</string>
    <string name="cannot_play_own_square">You cannot swap your own square. Please choose another.</string>
    <string name="cannot_play_last_square">You cannot swap the last square played. Please choose another square.</string>
    <string name="cannot_play_swap">You have no more available swaps to play. Please select an empty square to play a token.</string>
    <string name="cannot_play_token">You have no more available tokens to play. Please select an opponents square to swap.</string>
</resources>
