<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xobackgroundgrey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_32"
            android:textStyle="bold|italic"
            android:text="@string/color_selection"/>
    </RelativeLayout>
    <include
        android:id="@+id/gameboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        layout="@layout/selection_row"/>
    <include
        android:id="@+id/player1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        layout="@layout/selection_row"/>
    <include
        android:id="@+id/player2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        layout="@layout/selection_row"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/swaps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_16"
            android:gravity="center"
            android:textSize="@dimen/text_size_32"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/swaps"/>
        <RadioGroup
            android:id="@+id/swaps_qty_parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_toRightOf="@id/swaps"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/swaps_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_32"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                android:text="5"/>
            <RadioButton
                android:id="@+id/swaps_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:textSize="@dimen/text_size_32"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                android:text="9"/>
            <RadioButton
                android:id="@+id/swaps_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:textSize="@dimen/text_size_32"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                android:text="13"/>
        </RadioGroup>
        <Button
            android:id="@+id/start_game"
            android:layout_width="@dimen/main_button_width"
            android:layout_height="@dimen/main_button_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/main_button"
            android:layout_marginRight="@dimen/margin_16"
            android:textSize="@dimen/text_size_24"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/start_game"
            />
    </RelativeLayout>

</LinearLayout>